Refactor beam_former (BROKEN)

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -327,7 +327,7 @@
    },
    "outputs": [],
    "source": [
-    "from audio_stack.spectrum_estimator import normalize_rows\n",
+    "from audio_stack.beam_former import normalize_rows\n",
     "\n",
     "base_dict = dict(\n",
     "    motors=False,\n",
@@ -457,7 +457,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.gridspec as gridspec\n",
-    "from audio_stack.spectrum_estimator import combine_rows\n",
+    "from audio_stack.beam_former import combine_rows\n",
     "    \n",
     "base_dict = dict(\n",
     "    motors=True,\n",
@@ -657,7 +657,7 @@
    "outputs": [],
    "source": [
     "from audio_stack.beam_former import BeamFormer\n",
-    "from audio_stack.spectrum_estimator import normalize_rows\n",
+    "from audio_stack.beam_former import normalize_rows\n",
     "\n",
     "base_dict = dict(\n",
     "    motors=True,\n",
@@ -744,7 +744,7 @@
    "outputs": [],
    "source": [
     "from audio_stack.beam_former import BeamFormer\n",
-    "from audio_stack.spectrum_estimator import normalize_rows\n",
+    "from audio_stack.beam_former import normalize_rows\n",
     "\n",
     "base_dict = dict(\n",
     "    motors=True,\n",
