--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -31,31 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    df_results\n",
-    "    print('not overwriting df_results')\n",
-    "except:\n",
-    "    df_results = pd.DataFrame(columns=[\n",
-    "        'exp_name',\n",
-    "        'degree', \n",
-    "        'motors',\n",
-    "        'combination_n',\n",
-    "        'combination_method',\n",
-    "        'normalization_method',\n",
-    "        'max_counter',\n",
-    "        'raw_heatmap',\n",
-    "        'dynamic_heatmap',\n",
-    "        'multi_heatmap'\n",
-    "    ])\n",
-    "    print('initialized df_results')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from evaluate_data import read_df, get_spec\n",
     "\n",
     "#exp_name = '2020_10_30_dynamic'; degree=0; start_idx = 0# correct mic positions, but only one degree\n",
@@ -84,6 +59,25 @@
     "index_start = df.iloc[0]['index']\n",
     "df_pos = df_pos.loc[df_pos.index >= index_start]\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    df_results\n",
+    "    print('not overwriting df_results')\n",
+    "except:\n",
+    "    df_results = pd.DataFrame(columns=[\n",
+    "        'combination_n',\n",
+    "        'raw_heatmap',\n",
+    "        'dynamic_heatmap',\n",
+    "        'multi_heatmap'\n",
+    "    ] + list(params.keys()))\n",
+    "    print('initialized df_results')"
    ]
   },
   {
@@ -129,9 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "n_columns = len(df)\n",
@@ -155,6 +147,20 @@
     "    spectrogram[:, i_col] = np.sum(np.abs(signals_f), axis=0)\n",
     "    i_col += 1\n",
     "    \n",
+    "#selected_idx = range(len(frequencies))\n",
+    "selected_hz = [800]\n",
+    "selected_idx = [np.argmin(np.abs(frequencies - hz)) for hz in selected_hz]\n",
+    "print(selected_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "plt.figure()\n",
     "plt.pcolormesh(t_wav, f_wav, np.angle(spectrogram_wav))\n",
     "plt.xlabel('time [s]')\n",
@@ -172,11 +178,6 @@
     "plt.xlabel('time [s]')\n",
     "plt.ylabel('frequency [Hz]')\n",
     "plt.title('recorded spectrogram')\n",
-    "\n",
-    "#selected_idx = range(len(frequencies))\n",
-    "selected_hz = [800]\n",
-    "selected_idx = [np.argmin(np.abs(frequencies - hz)) for hz in selected_hz]\n",
-    "print(selected_idx)\n",
     "\n",
     "plt.figure()\n",
     "for i in selected_idx:\n",
@@ -198,25 +199,25 @@
    "outputs": [],
    "source": [
     "# resample df_pos at the timestamps in df\n",
-    "MAX_ALLOWED_LAG_MS = 20\n",
     "\n",
-    "for i, row in df.iterrows():\n",
-    "    timestamp = row.timestamp\n",
-    "    \n",
-    "    # most recent position timestamp\n",
-    "    if not len(df_pos[df_pos.timestamp <= timestamp]):\n",
-    "        df.loc[i, 'yaw_deg'] = None\n",
-    "        print('not position before first audio:', timestamp, df_pos.timestamp.values)\n",
-    "        continue\n",
-    "    pos_idx = df_pos[df_pos.timestamp <= timestamp].index[-1]\n",
-    "    lag = timestamp - df_pos.loc[pos_idx].timestamp\n",
-    "    if lag <= MAX_ALLOWED_LAG_MS:\n",
-    "        df.loc[i, 'yaw_deg'] = df_pos.loc[pos_idx].yaw_deg\n",
-    "        df.loc[i, 'dx'] = df_pos.loc[pos_idx].dx\n",
-    "        df.loc[i, 'dy'] = df_pos.loc[pos_idx].dy\n",
-    "    else:\n",
-    "        df.loc[i, 'yaw_deg'] = None\n",
-    "        print('too high time lag (in ms):', lag)"
+    "def add_pose_to_df(df, df_pos, max_allowed_lag_ms=MAX_ALLOWED_LAG_MS):\n",
+    "    for i, row in df.iterrows():\n",
+    "        timestamp = row.timestamp\n",
+    "\n",
+    "        # most recent position timestamp\n",
+    "        if not len(df_pos[df_pos.timestamp <= timestamp]):\n",
+    "            df.loc[i, 'yaw_deg'] = None\n",
+    "            print('no position before first audio:', timestamp, df_pos.timestamp.values)\n",
+    "            continue\n",
+    "        pos_idx = df_pos[df_pos.timestamp <= timestamp].index[-1]\n",
+    "        lag = timestamp - df_pos.loc[pos_idx].timestamp\n",
+    "        if lag <= MAX_ALLOWED_LAG_MS:\n",
+    "            df.loc[i, 'yaw_deg'] = df_pos.loc[pos_idx].yaw_deg\n",
+    "            df.loc[i, 'dx'] = df_pos.loc[pos_idx].dx\n",
+    "            df.loc[i, 'dy'] = df_pos.loc[pos_idx].dy\n",
+    "        else:\n",
+    "            df.loc[i, 'yaw_deg'] = None\n",
+    "            print('too high time lag (in ms):', lag)"
    ]
   },
   {
@@ -227,6 +228,9 @@
    },
    "outputs": [],
    "source": [
+    "MAX_ALLOWED_LAG_MS = 20\n",
+    "add_pose_to_df(df, df_pos)\n",
+    "\n",
     "start_pos = np.array([0, 0])\n",
     "positions = np.empty([len(df), 2])\n",
     "\n",
@@ -255,22 +259,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from audio_stack.beam_former import BeamFormer\n",
-    "from audio_stack.spectrum_estimator import normalize_rows, combine_rows\n",
+    "from audio_stack.beam_former import BeamFormer, normalize_rows, combine_rows\n",
     "import progressbar\n",
     "\n",
-    "MAX_COUNTER = 5\n",
     "alpha = 0.5 # set to 1 for no effect\n",
     "\n",
-    "combination_n = MAX_COUNTER\n",
+    "combination_n = 5\n",
     "combination_method = \"sum\"\n",
     "normalization_method = \"none\"\n",
+    "method = \"mvdr\"\n",
     "\n",
     "frequencies = df.iloc[0].frequencies[selected_idx]\n",
     "\n",
     "beam_former = BeamFormer(mic_positions=mic_positions)\n",
-    "beam_former.init_dynamic_estimate(combination_n, combination_method, normalization_method)\n",
-    "beam_former.init_multi_estimate(frequencies)\n",
+    "beam_former.init_dynamic_estimate(frequencies, combination_n, combination_method, normalization_method)\n",
+    "beam_former.init_multi_estimate(frequencies, combination_n)\n",
     "\n",
     "n_columns = len(df) #100\n",
     "angles = beam_former.theta_scan\n",
@@ -279,7 +282,6 @@
     "dynamic_heatmap = np.zeros((len(angles), n_columns))\n",
     "multi_heatmap = np.zeros((len(angles), n_columns))\n",
     "\n",
-    "multi_counter = 0\n",
     "i_col = 0\n",
     "R = None\n",
     "\n",
@@ -305,8 +307,11 @@
     "            R = R_new\n",
     "        else:\n",
     "            R = alpha*R_new + (1-alpha)*R\n",
-    "        #raw_spectrum = beam_former.get_das_spectrum(R, freqs)\n",
-    "        raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
+    "        \n",
+    "        if method == 'mvdr':\n",
+    "            raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
+    "        elif method == 'das':\n",
+    "            raw_spectrum = beam_former.get_das_spectrum(R, freqs)\n",
     "        time_sec = row.audio_timestamp / 1e6\n",
     "        \n",
     "        if not pd.isna(row.yaw_deg):\n",
@@ -315,18 +320,12 @@
     "            dynamic_spectrum = beam_former.get_dynamic_estimate()\n",
     "            dynamic_spectrum = combine_rows(dynamic_spectrum, combination_method, keepdims=True)\n",
     "            dynamic_spectrum = normalize_rows(dynamic_spectrum, method=\"zero_to_one\")\n",
-    "            #dynamic_spectrum = beam_former.shift_spectrum(dynamic_spectrum, orientation_deg)\n",
     "\n",
     "            #### MULTI\n",
-    "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, -orientation_deg)\n",
-    "            multi_counter += 1 #TODO(FD) add this to beam_former\n",
-    "            multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
+    "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, orientation_deg)\n",
+    "            multi_spectrum = beam_former.get_multi_estimate(method=method)\n",
     "            multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
     "            multi_spectrum = normalize_rows(multi_spectrum, method=\"zero_to_one\")\n",
-    "\n",
-    "            if multi_counter > MAX_COUNTER:\n",
-    "                beam_former.init_multi_estimate(freqs)\n",
-    "                multi_counter = 0\n",
     "        else:\n",
     "            print('not updating dynamic and multi:', i_col)\n",
     "                \n",
@@ -348,16 +347,11 @@
     "        p.update(i_col)\n",
     "\n",
     "df_results.loc[len(df_results), : ] = {\n",
-    " 'exp_name': exp_name,\n",
-    " 'degree': degree,\n",
-    " 'motors': params['motors'],\n",
     " 'combination_n': combination_n,\n",
-    " 'combination_method': combination_method,\n",
-    " 'normalization_method': normalization_method,\n",
-    " 'max_counter': MAX_COUNTER,\n",
     " 'raw_heatmap': raw_heatmap,\n",
     " 'dynamic_heatmap': dynamic_heatmap,\n",
-    " 'multi_heatmap': multi_heatmap\n",
+    " 'multi_heatmap': multi_heatmap,\n",
+    "  **params\n",
     "}"
    ]
   },
@@ -369,7 +363,7 @@
    "source": [
     "print(df_results.exp_name.unique())\n",
     "print(df_results.motors.unique())\n",
-    "fname = f'DynamicAnalaysis_{exp_name}_MINUS.pkl'\n",
+    "fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
     "df_results.to_pickle(fname)\n",
     "print('saved as', fname)"
    ]
@@ -408,8 +402,6 @@
     "    exp_name = plot_dict.get('exp_name')\n",
     "    degree = plot_dict.get('degree')\n",
     "    \n",
-    "    #fname = f'DynamicAnalaysis_{exp_name}_ZEROYAW.pkl'\n",
-    "    #fname = f'DynamicAnalaysis_{exp_name}_MINUS.pkl'\n",
     "    fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
     "    df_results = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
