--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -31,6 +31,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# resample df_pos at the timestamps in df\n",
+    "MAX_ALLOWED_LAG_MS = 20\n",
+    "\n",
+    "def add_pose_to_df(df, df_pos, max_allowed_lag_ms=MAX_ALLOWED_LAG_MS):\n",
+    "    for i, row in df.iterrows():\n",
+    "        timestamp = row.timestamp\n",
+    "\n",
+    "        # most recent position timestamp\n",
+    "        if not len(df_pos[df_pos.timestamp <= timestamp]):\n",
+    "            df.loc[i, 'yaw_deg'] = None\n",
+    "            print('no position before first audio:', timestamp, df_pos.timestamp.values)\n",
+    "            continue\n",
+    "        pos_idx = df_pos[df_pos.timestamp <= timestamp].index[-1]\n",
+    "        lag = timestamp - df_pos.loc[pos_idx].timestamp\n",
+    "        if lag <= MAX_ALLOWED_LAG_MS:\n",
+    "            df.loc[i, 'yaw_deg'] = df_pos.loc[pos_idx].yaw_deg\n",
+    "            df.loc[i, 'dx'] = df_pos.loc[pos_idx].dx\n",
+    "            df.loc[i, 'dy'] = df_pos.loc[pos_idx].dy\n",
+    "        else:\n",
+    "            df.loc[i, 'yaw_deg'] = None\n",
+    "            print('too high time lag (in ms):', lag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from evaluate_data import read_df, get_spec\n",
     "\n",
     "#exp_name = '2020_10_30_dynamic'; degree=0; start_idx = 0# correct mic positions, but only one degree\n",
@@ -58,99 +87,10 @@
     "df = df.iloc[start_idx:]\n",
     "index_start = df.iloc[0]['index']\n",
     "df_pos = df_pos.loc[df_pos.index >= index_start]\n",
+    "\n",
+    "add_pose_to_df(df, df_pos)\n",
+    "\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    df_results\n",
-    "    print('not overwriting df_results')\n",
-    "except:\n",
-    "    df_results = pd.DataFrame(columns=[\n",
-    "        'combination_n',\n",
-    "        'raw_heatmap',\n",
-    "        'dynamic_heatmap',\n",
-    "        'multi_heatmap'\n",
-    "    ] + list(params.keys()))\n",
-    "    print('initialized df_results')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_pos.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.scatter(df_pos.timestamp.values, [1]*len(df_pos), label='df_pos')\n",
-    "plt.scatter(df.timestamp.values, [0]*len(df), label='df')\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
-    "all_frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
-    "frequency_matrix = np.zeros((len(all_frequencies), len(df)))\n",
-    "i_col = 0\n",
-    "for j, row in df.iterrows():\n",
-    "    for f in row.frequencies:\n",
-    "        frequency_matrix[np.where(f==all_frequencies), i_col] = 1.0 \n",
-    "    i_col += 1\n",
-    "fig = plt.figure()\n",
-    "plt.pcolormesh(range(50), all_frequencies, frequency_matrix[:, :50]) \n",
-    "fig.set_size_inches(10, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_columns = len(df)\n",
-    "\n",
-    "mic_positions_df = df.iloc[0].mic_positions # n_mics x 2\n",
-    "from crazyflie_description_py.parameters import MIC_POSITIONS\n",
-    "mic_positions = np.array(MIC_POSITIONS)\n",
-    "\n",
-    "if not np.allclose(mic_positions, mic_positions_df):\n",
-    "    print(\"Warning: wrong mic positions in df!\")\n",
-    "\n",
-    "frequencies = df.iloc[0].frequencies\n",
-    "print(frequencies)\n",
-    "times = df.audio_timestamp.values / 1e6\n",
-    "times -= times[0]\n",
-    "\n",
-    "spectrogram = np.zeros((len(frequencies), n_columns))\n",
-    "i_col = 0\n",
-    "for __, row in df.iterrows():\n",
-    "    signals_f = row.signals_f\n",
-    "    spectrogram[:, i_col] = np.sum(np.abs(signals_f), axis=0)\n",
-    "    i_col += 1\n",
-    "    \n",
-    "#selected_idx = range(len(frequencies))\n",
-    "selected_hz = [800]\n",
-    "selected_idx = [np.argmin(np.abs(frequencies - hz)) for hz in selected_hz]\n",
-    "print(selected_idx)"
    ]
   },
   {
@@ -162,74 +102,9 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.pcolormesh(t_wav, f_wav, np.angle(spectrogram_wav))\n",
-    "plt.xlabel('time [s]')\n",
-    "plt.ylabel('angle [Hz]')\n",
-    "plt.title('measurement mic spectrogram')\n",
-    "    \n",
-    "plt.figure()\n",
-    "plt.pcolormesh(t_wav, f_wav, np.log10(np.abs(spectrogram_wav)))\n",
-    "plt.xlabel('time [s]')\n",
-    "plt.ylabel('frequency [Hz]')\n",
-    "plt.title('measurement mic spectrogram')\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.pcolormesh(times, frequencies, np.log10(spectrogram))\n",
-    "plt.xlabel('time [s]')\n",
-    "plt.ylabel('frequency [Hz]')\n",
-    "plt.title('recorded spectrogram')\n",
-    "\n",
-    "plt.figure()\n",
-    "for i in selected_idx:\n",
-    "    plt.plot(times, spectrogram[i, :], label=f'{frequencies[i]:.1f}Hz')\n",
-    "plt.title('recorded spectrogram at each bin')\n",
+    "plt.scatter(df_pos.timestamp.values, [1]*len(df_pos), label='df_pos')\n",
+    "plt.scatter(df.timestamp.values, [0]*len(df), label='df')\n",
     "plt.legend()\n",
-    "\n",
-    "plt.figure()\n",
-    "for i in range(mic_positions.shape[0]):\n",
-    "    plt.scatter(mic_positions[i, 0], mic_positions[i, 1], label=f'mic{i}')\n",
-    "plt.legend()\n",
-    "plt.title('mic_positions')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resample df_pos at the timestamps in df\n",
-    "\n",
-    "def add_pose_to_df(df, df_pos, max_allowed_lag_ms=MAX_ALLOWED_LAG_MS):\n",
-    "    for i, row in df.iterrows():\n",
-    "        timestamp = row.timestamp\n",
-    "\n",
-    "        # most recent position timestamp\n",
-    "        if not len(df_pos[df_pos.timestamp <= timestamp]):\n",
-    "            df.loc[i, 'yaw_deg'] = None\n",
-    "            print('no position before first audio:', timestamp, df_pos.timestamp.values)\n",
-    "            continue\n",
-    "        pos_idx = df_pos[df_pos.timestamp <= timestamp].index[-1]\n",
-    "        lag = timestamp - df_pos.loc[pos_idx].timestamp\n",
-    "        if lag <= MAX_ALLOWED_LAG_MS:\n",
-    "            df.loc[i, 'yaw_deg'] = df_pos.loc[pos_idx].yaw_deg\n",
-    "            df.loc[i, 'dx'] = df_pos.loc[pos_idx].dx\n",
-    "            df.loc[i, 'dy'] = df_pos.loc[pos_idx].dy\n",
-    "        else:\n",
-    "            df.loc[i, 'yaw_deg'] = None\n",
-    "            print('too high time lag (in ms):', lag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "MAX_ALLOWED_LAG_MS = 20\n",
-    "add_pose_to_df(df, df_pos)\n",
     "\n",
     "start_pos = np.array([0, 0])\n",
     "positions = np.empty([len(df), 2])\n",
@@ -259,6 +134,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "    df_results\n",
+    "    print('not overwriting df_results')\n",
+    "except:\n",
+    "    df_results = pd.DataFrame(columns=[\n",
+    "        'combination_n',\n",
+    "        'raw_heatmap',\n",
+    "        'dynamic_heatmap',\n",
+    "        'multi_heatmap'\n",
+    "    ] + list(params.keys()))\n",
+    "    print('initialized df_results')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from audio_stack.beam_former import BeamFormer, normalize_rows, combine_rows\n",
     "import progressbar\n",
     "\n",
@@ -269,7 +163,10 @@
     "normalization_method = \"none\"\n",
     "method = \"mvdr\"\n",
     "\n",
+    "selected_hz = [800]\n",
+    "selected_idx = [np.argmin(np.abs(df.iloc[0].frequencies - hz)) for hz in selected_hz]\n",
     "frequencies = df.iloc[0].frequencies[selected_idx]\n",
+    "mic_positions = df.iloc[0].mic_positions\n",
     "\n",
     "beam_former = BeamFormer(mic_positions=mic_positions)\n",
     "beam_former.init_dynamic_estimate(frequencies, combination_n, combination_method, normalization_method)\n",
@@ -293,8 +190,6 @@
     "    for __, row in df.iterrows():\n",
     "        \n",
     "        # TODO(FD): smarter frequency bin selection\n",
-    "        selected_hz = [800]\n",
-    "        selected_idx = [np.argmin(np.abs(row.frequencies - hz)) for hz in selected_hz]\n",
     "        \n",
     "        signals_f = row.signals_f[:, selected_idx]\n",
     "        freqs = row.frequencies[selected_idx]\n",
@@ -361,11 +256,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, axs = plt.subplots(1, 3)\n",
+    "fig.set_size_inches(15, 5)\n",
+    "\n",
+    "times = range(raw_heatmap.shape[1])\n",
+    "angles = BeamFormer.theta_scan * 180 / np.pi\n",
+    "\n",
+    "axs[0].pcolormesh(times, angles, raw_heatmap)\n",
+    "axs[0].set_title('raw heatmap')\n",
+    "\n",
+    "axs[1].pcolormesh(times, angles, multi_heatmap)\n",
+    "axs[1].set_title('multi heatmap')\n",
+    "\n",
+    "axs[2].pcolormesh(times, angles, dynamic_heatmap)\n",
+    "axs[2].set_title('dynamic heatmap')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(df_results.exp_name.unique())\n",
     "print(df_results.motors.unique())\n",
     "fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
-    "df_results.to_pickle(fname)\n",
-    "print('saved as', fname)"
+    "#df_results.to_pickle(fname)\n",
+    "#print('saved as', fname)"
    ]
   },
   {
