Reset to working version

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -156,9 +156,10 @@
     "from audio_stack.beam_former import BeamFormer, normalize_rows, combine_rows\n",
     "import progressbar\n",
     "\n",
+    "MAX_COUNTER = 5\n",
     "alpha = 0.5 # set to 1 for no effect\n",
     "\n",
-    "combination_n = 5\n",
+    "combination_n = MAX_COUNTER\n",
     "combination_method = \"sum\"\n",
     "normalization_method = \"none\"\n",
     "method = \"mvdr\"\n",
@@ -170,9 +171,9 @@
     "\n",
     "beam_former = BeamFormer(mic_positions=mic_positions)\n",
     "beam_former.init_dynamic_estimate(frequencies, combination_n, combination_method, normalization_method)\n",
-    "beam_former.init_multi_estimate(frequencies, combination_n)\n",
+    "beam_former.init_multi_estimate(frequencies)\n",
     "\n",
-    "n_columns = len(df) #100\n",
+    "n_columns = 50 #len(df) #100\n",
     "angles = beam_former.theta_scan\n",
     "times = np.empty(n_columns)\n",
     "raw_heatmap = np.zeros((len(angles), n_columns))\n",
@@ -181,6 +182,7 @@
     "\n",
     "i_col = 0\n",
     "R = None\n",
+    "multi_counter = 0\n",
     "\n",
     "dynamic_spectrum = None\n",
     "multi_spectrum = None\n",
@@ -217,10 +219,16 @@
     "            dynamic_spectrum = normalize_rows(dynamic_spectrum, method=\"zero_to_one\")\n",
     "\n",
     "            #### MULTI\n",
-    "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, orientation_deg)\n",
-    "            multi_spectrum = beam_former.get_multi_estimate(method=method)\n",
+    "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, -orientation_deg)\n",
+    "            multi_counter += 1 #TODO(FD) add this to beam_former\n",
+    "            multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
     "            multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
     "            multi_spectrum = normalize_rows(multi_spectrum, method=\"zero_to_one\")\n",
+    "\n",
+    "            if multi_counter > MAX_COUNTER:\n",
+    "                beam_former.init_multi_estimate(freqs)\n",
+    "                multi_counter = 0\n",
+    "                print('resetting')\n",
     "        else:\n",
     "            print('not updating dynamic and multi:', i_col)\n",
     "                \n",
