Fixed new method

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -156,7 +156,7 @@
     "from audio_stack.beam_former import BeamFormer, normalize_rows, combine_rows\n",
     "import progressbar\n",
     "\n",
-    "MAX_COUNTER = 5\n",
+    "MAX_COUNTER = 2\n",
     "alpha = 0.5 # set to 1 for no effect\n",
     "\n",
     "combination_n = MAX_COUNTER\n",
@@ -172,13 +172,15 @@
     "beam_former = BeamFormer(mic_positions=mic_positions)\n",
     "beam_former.init_dynamic_estimate(frequencies, combination_n, combination_method, normalization_method)\n",
     "beam_former.init_multi_estimate(frequencies)\n",
+    "beam_former.init_multi_estimate_new(frequencies, combination_n)\n",
     "\n",
-    "n_columns = 50 #len(df) #100\n",
+    "n_columns = len(df) #100\n",
     "angles = beam_former.theta_scan\n",
     "times = np.empty(n_columns)\n",
     "raw_heatmap = np.zeros((len(angles), n_columns))\n",
     "dynamic_heatmap = np.zeros((len(angles), n_columns))\n",
     "multi_heatmap = np.zeros((len(angles), n_columns))\n",
+    "multi_heatmap_new = np.zeros((len(angles), n_columns))\n",
     "\n",
     "i_col = 0\n",
     "R = None\n",
@@ -186,6 +188,7 @@
     "\n",
     "dynamic_spectrum = None\n",
     "multi_spectrum = None\n",
+    "multi_spectrum_new = None\n",
     "\n",
     "print('start at degrees:', df.yaw_deg.iloc[0])\n",
     "with progressbar.ProgressBar(max_value=n_columns, redirect_stdout=True) as p:\n",
@@ -224,11 +227,16 @@
     "            multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
     "            multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
     "            multi_spectrum = normalize_rows(multi_spectrum, method=\"zero_to_one\")\n",
+    "            \n",
+    "            #### MULTI_NEW\n",
+    "            beam_former.add_to_multi_estimate_new(signals_f.T, freqs, time_sec, -orientation_deg)\n",
+    "            multi_spectrum_new = beam_former.get_multi_estimate_new(method='mvdr')\n",
+    "            multi_spectrum_new = combine_rows(multi_spectrum_new, combination_method, keepdims=True)\n",
+    "            multi_spectrum_new = normalize_rows(multi_spectrum_new, method=\"zero_to_one\")\n",
     "\n",
-    "            if multi_counter > MAX_COUNTER:\n",
+    "            if multi_counter >= MAX_COUNTER:\n",
     "                beam_former.init_multi_estimate(freqs)\n",
     "                multi_counter = 0\n",
-    "                print('resetting')\n",
     "        else:\n",
     "            print('not updating dynamic and multi:', i_col)\n",
     "                \n",
@@ -241,6 +249,9 @@
     "            dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
     "        if multi_spectrum is not None:\n",
     "            multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
+    "            \n",
+    "        if multi_spectrum_new is not None:\n",
+    "            multi_heatmap_new[:, i_col] = multi_spectrum_new.flatten()\n",
     "        times[i_col] = time_sec\n",
     "        i_col += 1\n",
     "\n",
@@ -264,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(1, 3)\n",
+    "fig, axs = plt.subplots(1, 4)\n",
     "fig.set_size_inches(15, 5)\n",
     "\n",
     "times = range(raw_heatmap.shape[1])\n",
@@ -276,8 +287,11 @@
     "axs[1].pcolormesh(times, angles, multi_heatmap)\n",
     "axs[1].set_title('multi heatmap')\n",
     "\n",
-    "axs[2].pcolormesh(times, angles, dynamic_heatmap)\n",
-    "axs[2].set_title('dynamic heatmap')"
+    "axs[2].pcolormesh(times, angles, multi_heatmap_new)\n",
+    "axs[2].set_title('multi heatmap new')\n",
+    "\n",
+    "axs[3].pcolormesh(times, angles, dynamic_heatmap)\n",
+    "axs[3].set_title('dynamic heatmap')"
    ]
   },
   {
