Remove old method

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -75,7 +75,7 @@
     "    degree = degree,\n",
     "    props = False,\n",
     "    snr = False,\n",
-    "    motors = False,\n",
+    "    motors = True,\n",
     "    source = 'mono_linear',\n",
     "    exp_name = exp_name\n",
     ")\n",
@@ -156,10 +156,9 @@
     "from audio_stack.beam_former import BeamFormer, normalize_rows, combine_rows\n",
     "import progressbar\n",
     "\n",
-    "MAX_COUNTER = 2\n",
     "alpha = 0.5 # set to 1 for no effect\n",
     "\n",
-    "combination_n = MAX_COUNTER\n",
+    "combination_n = 5\n",
     "combination_method = \"sum\"\n",
     "normalization_method = \"none\"\n",
     "method = \"mvdr\"\n",
@@ -171,8 +170,7 @@
     "\n",
     "beam_former = BeamFormer(mic_positions=mic_positions)\n",
     "beam_former.init_dynamic_estimate(frequencies, combination_n, combination_method, normalization_method)\n",
-    "beam_former.init_multi_estimate(frequencies)\n",
-    "beam_former.init_multi_estimate_new(frequencies, combination_n)\n",
+    "beam_former.init_multi_estimate(frequencies, combination_n)\n",
     "\n",
     "n_columns = len(df) #100\n",
     "angles = beam_former.theta_scan\n",
@@ -180,15 +178,12 @@
     "raw_heatmap = np.zeros((len(angles), n_columns))\n",
     "dynamic_heatmap = np.zeros((len(angles), n_columns))\n",
     "multi_heatmap = np.zeros((len(angles), n_columns))\n",
-    "multi_heatmap_new = np.zeros((len(angles), n_columns))\n",
     "\n",
     "i_col = 0\n",
     "R = None\n",
-    "multi_counter = 0\n",
     "\n",
     "dynamic_spectrum = None\n",
     "multi_spectrum = None\n",
-    "multi_spectrum_new = None\n",
     "\n",
     "print('start at degrees:', df.yaw_deg.iloc[0])\n",
     "with progressbar.ProgressBar(max_value=n_columns, redirect_stdout=True) as p:\n",
@@ -221,22 +216,11 @@
     "            dynamic_spectrum = combine_rows(dynamic_spectrum, combination_method, keepdims=True)\n",
     "            dynamic_spectrum = normalize_rows(dynamic_spectrum, method=\"zero_to_one\")\n",
     "\n",
-    "            #### MULTI\n",
+    "            #### MULTI_NEW\n",
     "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, -orientation_deg)\n",
-    "            multi_counter += 1 #TODO(FD) add this to beam_former\n",
     "            multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
     "            multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
     "            multi_spectrum = normalize_rows(multi_spectrum, method=\"zero_to_one\")\n",
-    "            \n",
-    "            #### MULTI_NEW\n",
-    "            beam_former.add_to_multi_estimate_new(signals_f.T, freqs, time_sec, -orientation_deg)\n",
-    "            multi_spectrum_new = beam_former.get_multi_estimate_new(method='mvdr')\n",
-    "            multi_spectrum_new = combine_rows(multi_spectrum_new, combination_method, keepdims=True)\n",
-    "            multi_spectrum_new = normalize_rows(multi_spectrum_new, method=\"zero_to_one\")\n",
-    "\n",
-    "            if multi_counter >= MAX_COUNTER:\n",
-    "                beam_former.init_multi_estimate(freqs)\n",
-    "                multi_counter = 0\n",
     "        else:\n",
     "            print('not updating dynamic and multi:', i_col)\n",
     "                \n",
@@ -249,9 +233,6 @@
     "            dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
     "        if multi_spectrum is not None:\n",
     "            multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
-    "            \n",
-    "        if multi_spectrum_new is not None:\n",
-    "            multi_heatmap_new[:, i_col] = multi_spectrum_new.flatten()\n",
     "        times[i_col] = time_sec\n",
     "        i_col += 1\n",
     "\n",
@@ -275,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(1, 4)\n",
+    "fig, axs = plt.subplots(1, 3)\n",
     "fig.set_size_inches(15, 5)\n",
     "\n",
     "times = range(raw_heatmap.shape[1])\n",
@@ -287,11 +268,8 @@
     "axs[1].pcolormesh(times, angles, multi_heatmap)\n",
     "axs[1].set_title('multi heatmap')\n",
     "\n",
-    "axs[2].pcolormesh(times, angles, multi_heatmap_new)\n",
-    "axs[2].set_title('multi heatmap new')\n",
-    "\n",
-    "axs[3].pcolormesh(times, angles, dynamic_heatmap)\n",
-    "axs[3].set_title('dynamic heatmap')"
+    "axs[2].pcolormesh(times, angles, dynamic_heatmap)\n",
+    "axs[2].set_title('dynamic heatmap')"
    ]
   },
   {
@@ -303,8 +281,8 @@
     "print(df_results.exp_name.unique())\n",
     "print(df_results.motors.unique())\n",
     "fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
-    "#df_results.to_pickle(fname)\n",
-    "#print('saved as', fname)"
+    "df_results.to_pickle(fname)\n",
+    "print('saved as', fname)"
    ]
   },
   {
