--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -134,43 +134,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    df_results\n",
-    "    print('not overwriting df_results')\n",
-    "except:\n",
-    "    df_results = pd.DataFrame(columns=[\n",
-    "        'combination_n',\n",
-    "        'raw_heatmap',\n",
-    "        'dynamic_heatmap',\n",
-    "        'multi_heatmap'\n",
-    "    ] + list(params.keys()))\n",
-    "    print('initialized df_results')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from audio_stack.beam_former import BeamFormer, normalize_rows, combine_rows\n",
     "import progressbar\n",
-    "\n",
-    "alpha = 0.5 # set to 1 for no effect\n",
     "\n",
     "combination_n = 5\n",
     "combination_method = \"sum\"\n",
     "normalization_method = \"none\"\n",
     "method = \"mvdr\"\n",
+    "bin_selection = \"fixed\"; selected_hz = [800]\n",
     "\n",
-    "selected_hz = [800]\n",
-    "selected_idx = [np.argmin(np.abs(df.iloc[0].frequencies - hz)) for hz in selected_hz]\n",
-    "frequencies = df.iloc[0].frequencies[selected_idx]\n",
+    "# covariance averaging\n",
+    "#averaging = 'iir'\n",
+    "#alpha = 0.5 # set to 1 for no effect\n",
+    "#R = None\n",
+    "\n",
+    "averaging = 'ma'\n",
+    "R_idx = 0; R_list = [[]] * combination_n\n",
+    "\n",
     "mic_positions = df.iloc[0].mic_positions\n",
-    "\n",
     "beam_former = BeamFormer(mic_positions=mic_positions)\n",
-    "beam_former.init_dynamic_estimate(frequencies, combination_n, combination_method, normalization_method)\n",
-    "beam_former.init_multi_estimate(frequencies, combination_n)\n",
+    "\n",
+    "if bin_selection == \"fixed\":\n",
+    "    selected_idx = [np.argmin(np.abs(df.iloc[0].frequencies - hz)) for hz in selected_hz]\n",
+    "    frequencies = df.iloc[0].frequencies[selected_idx] \n",
+    "    beam_former.init_dynamic_estimate(frequencies, combination_n, combination_method, normalization_method)\n",
+    "    beam_former.init_multi_estimate(frequencies, combination_n)\n",
+    "else:\n",
+    "    # TODO(FD): implement good initialization\n",
+    "    pass\n",
     "\n",
     "n_columns = len(df) #100\n",
     "angles = beam_former.theta_scan\n",
@@ -178,9 +169,9 @@
     "raw_heatmap = np.zeros((len(angles), n_columns))\n",
     "dynamic_heatmap = np.zeros((len(angles), n_columns))\n",
     "multi_heatmap = np.zeros((len(angles), n_columns))\n",
+    "spectrogram = np.zeros((len(frequencies), mic_positions.shape[0], n_columns), dtype=np.complex)\n",
     "\n",
     "i_col = 0\n",
-    "R = None\n",
     "\n",
     "dynamic_spectrum = None\n",
     "multi_spectrum = None\n",
@@ -189,19 +180,26 @@
     "with progressbar.ProgressBar(max_value=n_columns, redirect_stdout=True) as p:\n",
     "    for __, row in df.iterrows():\n",
     "        \n",
-    "        # TODO(FD): smarter frequency bin selection\n",
-    "        \n",
-    "        signals_f = row.signals_f[:, selected_idx]\n",
-    "        freqs = row.frequencies[selected_idx]\n",
+    "        if bin_selection == \"fixed\":\n",
+    "            signals_f = row.signals_f[:, selected_idx] # n_mics x n_freqs\n",
+    "            freqs = row.frequencies[selected_idx]\n",
+    "        else:\n",
+    "            # TODO(FD): implement this\n",
+    "            pass\n",
     "\n",
     "        orientation_deg = row.yaw_deg\n",
     "        timestamp = row.timestamp\n",
     "        \n",
     "        R_new = beam_former.get_correlation(signals_f.T) # n_freqs x n_mics x n_mics\n",
-    "        if R is None:\n",
-    "            R = R_new\n",
-    "        else:\n",
-    "            R = alpha*R_new + (1-alpha)*R\n",
+    "        if averaging == 'iir':\n",
+    "            if R is None:\n",
+    "                R = R_new\n",
+    "            else:\n",
+    "                R = alpha*R_new + (1-alpha)*R\n",
+    "        elif averaging == 'ma':\n",
+    "            R_list[R_idx] = R_new\n",
+    "            R_idx = (R_idx + 1) % combination_n\n",
+    "            R = np.mean([R_elem for R_elem in R_list if len(R_elem)], axis=0)\n",
     "        \n",
     "        if method == 'mvdr':\n",
     "            raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
@@ -234,20 +232,14 @@
     "        if multi_spectrum is not None:\n",
     "            multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
     "        times[i_col] = time_sec\n",
+    "        spectrogram[:, :, i_col] = signals_f.T\n",
+    "        \n",
     "        i_col += 1\n",
     "\n",
     "        if i_col >= n_columns:\n",
     "            break\n",
     "            \n",
-    "        p.update(i_col)\n",
-    "\n",
-    "df_results.loc[len(df_results), : ] = {\n",
-    " 'combination_n': combination_n,\n",
-    " 'raw_heatmap': raw_heatmap,\n",
-    " 'dynamic_heatmap': dynamic_heatmap,\n",
-    " 'multi_heatmap': multi_heatmap,\n",
-    "  **params\n",
-    "}"
+    "        p.update(i_col)"
    ]
   },
   {
@@ -270,19 +262,6 @@
     "\n",
     "axs[2].pcolormesh(times, angles, dynamic_heatmap)\n",
     "axs[2].set_title('dynamic heatmap')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df_results.exp_name.unique())\n",
-    "print(df_results.motors.unique())\n",
-    "fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
-    "df_results.to_pickle(fname)\n",
-    "print('saved as', fname)"
    ]
   },
   {
@@ -318,24 +297,27 @@
     "    \n",
     "    exp_name = plot_dict.get('exp_name')\n",
     "    degree = plot_dict.get('degree')\n",
-    "    \n",
     "    fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
     "    df_results = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
     "    \n",
-    "    for motors in [True, False]:\n",
-    "        plot_dict['motors'] = motors\n",
-    "        #df_chosen = df_results.iloc[-1] # latest result\n",
-    "        try:\n",
-    "            df_chosen = df_results.loc[(df_results.exp_name==exp_name) & \n",
-    "                                       (df_results.degree==degree) &\n",
-    "                                       (df_results.motors==motors)].iloc[-1] # exp_name\n",
-    "            print('read', plot_dict)\n",
-    "        except:\n",
-    "            print('ignoring', plot_dict)\n",
+    "    df_raw = df_results.loc[(df_results.exp_name==exp_name) & \n",
+    "                               (df_results.degree==degree)]\n",
+    "    for (motors, combination_n, method, averaging), df_chosen in df_raw.groupby(['motors', 'combination_n', 'method', 'covariance_averaging']):\n",
+    "        \n",
+    "        assert len(df_chosen) == 1, len(df_chosen)\n",
+    "        \n",
+    "        df_chosen=df_chosen.iloc[0]\n",
+    "        \n",
+    "        if method == 'mvdr':\n",
     "            continue\n",
     "\n",
-    "        times = range(df_chosen.raw_heatmap.shape[1])\n",
+    "        plot_dict['motors'] = motors\n",
+    "        plot_dict['combination_n'] = combination_n\n",
+    "        plot_dict['method'] = method\n",
+    "        plot_dict['averaging'] = averaging\n",
+    "\n",
+    "        times = np.arange(df_chosen.raw_heatmap.shape[1])\n",
     "        angles = BeamFormer.theta_scan * 180 / np.pi\n",
     "\n",
     "        fig, axs = plt.subplots(1, 3)\n",
@@ -350,7 +332,30 @@
     "        axs[2].set_title('dynamic heatmap')\n",
     "\n",
     "        axs[0].set_ylabel('angle [deg]')\n",
-    "        fig.suptitle(plot_dict)"
+    "        fig.suptitle(plot_dict)\n",
+    "        \n",
+    "    for motors, df_chosen in df_raw.groupby(['motors']):\n",
+    "        df_chosen = df_chosen.iloc[0]\n",
+    "        \n",
+    "        fig, ax = plt.subplots()\n",
+    "        fig.set_size_inches(15, 5)\n",
+    "        spec = df_chosen.spectrogram\n",
+    "        for mic_i in range(spec.shape[1]):\n",
+    "            ax.semilogy(times, np.abs(spec[0, mic_i, :]), label=f'mic{mic_i}')\n",
+    "        ax.semilogy(times, np.sum(np.abs(spec[0, :, :]), axis=0), label='total')\n",
+    "        ax.legend()\n",
+    "        fig.suptitle(f'motors: {motors}')\n",
+    "        \n",
+    "        continue\n",
+    "        fig, axs = plt.subplots(3, 2)\n",
+    "        fig.set_size_inches(15, 5)\n",
+    "        cond = df_chosen.condition_numbers\n",
+    "        ranks = df_chosen.ranks\n",
+    "        for i, label in enumerate(['raw', 'averaged', 'multi']):\n",
+    "            axs[i, 0].semilogy(times, cond[i, 0, :], label=label, color=f'C{i}')\n",
+    "            axs[i, 1].scatter(times+0.5*i, ranks[i, 0, :], label=label, color=f'C{i}')\n",
+    "            axs[i, 0].legend(loc='upper right')\n",
+    "            axs[i, 1].legend(loc='upper right')"
    ]
   },
   {
