--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -32,6 +32,7 @@
    "outputs": [],
    "source": [
     "from evaluate_data import read_df, get_spec\n",
+    "from dynamic_analysis import add_pose_to_df\n",
     "\n",
     "#exp_name = '2020_10_30_dynamic'; degree=0; start_idx = 0# correct mic positions, but only one degree\n",
     "#exp_name = '2020_10_30_dynamic_test'; degree=0; start_idx=0 #degree=90; \n",
@@ -58,6 +59,7 @@
     "df = df.iloc[start_idx:]\n",
     "index_start = df.iloc[0]['index']\n",
     "df_pos = df_pos.loc[df_pos.index >= index_start]\n",
+    "add_pose_to_df(df, df_pos)\n",
     "df.head()"
    ]
   },
